[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/screens/data.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/data_table.tscn" type="PackedScene" id=2]

[node name="Data" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -253.0
margin_right = 253.0
margin_bottom = 28.0
text = "Data View"
align = 1

[node name="FetchingData" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -30.0
margin_right = 295.0
margin_bottom = 30.0
text = "Fetching Data..."
align = 1
valign = 1

[node name="DataTable" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 99.0
margin_top = 128.0
margin_right = -99.0
margin_bottom = -128.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = -253.0
margin_top = -67.0
margin_right = 253.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 506.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackToMenu" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 243.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Back to Menu"

[node name="GenerateCertificate" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 263.0
margin_right = 506.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Generate Certificate"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GenerateCertificate" to="." method="_on_GenerateCertificate_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
